se implementan algunas mejoras

--- a/src/app/modules/tracking/tracking-view/tracking-stepper-view/tracking-stepper-view.mobile.scss
+++ b/src/app/modules/tracking/tracking-view/tracking-stepper-view/tracking-stepper-view.mobile.scss
@@ -42,9 +42,9 @@
                     }
 
                     .step {
-                        &.beginning {
-                            margin-top: 10px;
-                        }
+                        // &.beginning {
+                        //     margin-top: 10px;
+                        // }
 
                         &.in-progress {
                             .step-separator {
