--- a/src/app/modules/tracking/tracking-view/tracking-view.mobile.scss
+++ b/src/app/modules/tracking/tracking-view/tracking-view.mobile.scss
@@ -13,4 +13,14 @@
             }
         }
     }
+    .tipografia1  {
+        font-weight: 600;
+        font-size: 18px;
+        color: #002F6C;
+    }
+
+    .tipografia2 {
+        font-size: 14px;
+        color: #888888;
+    }
 }
