--- a/src/app/modules/tracking/tracking-view/tracking-view.scss
+++ b/src/app/modules/tracking/tracking-view/tracking-view.scss
@@ -1,9 +1,14 @@
 :host {
+    .search-wrapper {
+        margin-bottom: 8px;
+    }
     .box-container {
         width: 100%;
-        margin: 0 auto;
+        // margin: 0 auto;
+        margin: 24px 0 0 0;
         box-shadow: 1px 3px 11px #CCC;
         padding: 0 24px;
+        margin-bottom: 8px; // reduce spacing between stacked cards
 
         &.no-padding {
             padding: 0;
