--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,14 @@
     <img src="./assets/loading.gif" class="align-self-center" />
 </div>
 
-<div class="container">
-    <div class="header"></div>
+<div class="topbar">
+    <div class="brand">IMPERIAL</div>
+    <div class="spacer"></div>
+</div>
+
+<div class="container page-container">
     <div class="body">
         <router-outlet></router-outlet>
     </div>
-    <div class="footer"></div>
 </div>
 
