--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,25 @@
 :host {
-    .header {
-        min-height: 50px;
+    .topbar {
+        width: 100%;
+        height: 48px;
+        background: #0a3d85;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        padding: 0 16px;
+        font-weight: 800;
+        letter-spacing: 0.5px;
     }
 
-    .body {
-        padding-bottom: 50px;
+    .brand { font-size: 16px; }
+    .spacer { flex: 1; }
+
+    .page-container {
+        background: #f4f6f9;
+        min-height: calc(100vh - 48px);
     }
+
+    .body { padding-bottom: 50px; }
 
     .loading-container {
         position: fixed;
