--- a/src/app/modules/tracking/tracking-view/tracking-view.template.html
+++ b/src/app/modules/tracking/tracking-view/tracking-view.template.html
@@ -1,4 +1,11 @@
-<div class="search-wrapper">
+<div class="tracking-back-row" *ngIf="invoice">
+    <button class="back-badge" (click)="volver()">
+        <span class="arrow">←</span>
+        <span class="text">Volver</span>
+    </button>
+</div>
+
+<div class="search-wrapper" *ngIf="!hideSearch">
     <app-tracking-search-box (search)="onSearch($event)" [searchModel]="searchModel"></app-tracking-search-box>
 </div>
 
