--- a/src/app/modules/tracking/tracking-view/tracking-view.template.html
+++ b/src/app/modules/tracking/tracking-view/tracking-view.template.html
@@ -34,8 +34,9 @@
     </div>
     <app-tracking-stepper-view class="hide-on-mobile" [steps]="invoice.trackingSteps" [orderDetails]="invoice.orderProducts"></app-tracking-stepper-view>
 </div>
-<div class="box-container" *ngIf="invoice?.hasProductDetails">
+<div class="box-container" *ngIf="invoice?.hasProductDetails" #orderDetailsView>
     <app-tracking-order-details [orderDetails]="invoice?.orderProducts" [isBox]="true"></app-tracking-order-details>
+    
 </div>
 
 <div class="box-container no-padding"  #trackingStepperView>
