se crea un componente para información del pepido

--- a/src/app/modules/tracking/tracking-view/tracking-view.template.html
+++ b/src/app/modules/tracking/tracking-view/tracking-view.template.html
@@ -8,5 +8,12 @@
 <div class="box-container" *ngIf="compraAdaptada">
   <app-purchase-stepper [trazabilidad]="compraAdaptada.trazabilidad"></app-purchase-stepper>
 </div>
+<div class="box-container" *ngIf="compraAdaptada">
+  <app-purchase-summary
+    [tipoEntrega]="resumenTipoEntrega()"
+    [direccionEntrega]="resumenDireccion()"
+    [fechaRetiro]="resumenFechaRetiro()">
+  </app-purchase-summary>
+</div>
 
 
