--- a/src/app/modules/tracking/tracking-view/tracking-view.scss
+++ b/src/app/modules/tracking/tracking-view/tracking-view.scss
@@ -103,3 +103,10 @@
         .doc-title { font-size: 18px; font-weight: 700; color: #0a3a6b; }
     }
 }
+
+.stepper-progress {
+    font-weight: 600;
+    font-size: 14px;
+    margin-bottom: 8px;
+    color: #2b3e63;
+}
