--- a/src/app/modules/tracking/tracking-view/tracking-stepper-view/tracking-stepper-view.template.html
+++ b/src/app/modules/tracking/tracking-view/tracking-stepper-view/tracking-stepper-view.template.html
@@ -1,6 +1,7 @@
 <div class="d-flex stepper-view-container mobile-vertical flex-column "
      [ngClass]="{'justify-content-md-center flex-md-row': !vertical, 'vertical': vertical}">
     <div class="fadingEffect" *ngIf="steps && steps.length > 0"></div>
+    <div class="steps-row" *ngIf="steps && steps.length">
     <ng-container *ngFor="let step of steps; let i = index;">
         <div class="step-container d-flex" [ngClass]="{'d-md-block': !vertical}">
             <div class="step-title order-1"
@@ -21,10 +22,10 @@
                      *ngIf="i > 0 || !vertical"
                      [ngClass]="{ 'beginning': i <= 0, 'd-none d-md-block': (i == 0 && !vertical)}"></div>
                                 <ng-container *ngIf="step.icon !== 'pending'; else pendingIcon">
-                                    <img class="icon" [src]="step.icon" alt="step icon" />
+                                    <div class="icon circle done"><img [src]="step.icon" alt="step icon" /></div>
                                 </ng-container>
                                 <ng-template #pendingIcon>
-                                    <div class="icon pending"></div>
+                                    <div class="icon circle pending"></div>
                                 </ng-template>
                 <div class="step-separator to align-self-center flex-grow-1"
                      *ngIf="i < (steps ? steps.length - 1 : 0) || !vertical"
@@ -37,4 +38,5 @@
             </div>
         </div>
     </ng-container>
+    </div>
 </div>
