se agrega componente de resumen de la compra

--- a/src/app/modules/tracking/tracking-view/tracking-view.scss
+++ b/src/app/modules/tracking/tracking-view/tracking-view.scss
@@ -110,3 +110,9 @@
     margin-bottom: 8px;
     color: #2b3e63;
 }
+
+.txt-titulo {
+  font: 400 16px / 28px Roboto, Helvetica Neue, sans-serif;
+  letter-spacing: normal;
+  margin: 0 0 16px;
+}
